--- a/bootstrap3.html
+++ b/bootstrap3.html
@@ -170,6 +170,23 @@
     </a>
 </div>
   
+  
+  <div class="container">
+  	<div class="row">
+    	<div class="col-md-4">
+        	<img src="#" style="width:100%;height:250px;"/>
+        </div>
+        <div class="col-md-4">
+        	<img src="#" style="width:100%;height:250px;"/>
+        </div>
+        <div class="col-md-4">
+        	<img src="#" style="width:100%;height:250px;"/>
+        </div>
+    </div>
+  </div>
+  
+  
+  
  <br/><br/>
   <footer class="footer">
       <div class="container-fluid">
