--- a/bootstrap3.html
+++ b/bootstrap3.html
@@ -172,7 +172,18 @@
   
   
   <div class="container">
-  	<div class="row">
+  	<div class="row" style="padding:10px;">
+    	<div class="col-md-4">
+        	<img src="#" style="width:100%;height:250px;"/>
+        </div>
+        <div class="col-md-4">
+        	<img src="#" style="width:100%;height:250px;"/>
+        </div>
+        <div class="col-md-4">
+        	<img src="#" style="width:100%;height:250px;"/>
+        </div>
+    </div>
+    <div class="row" style="padding:10px;">
     	<div class="col-md-4">
         	<img src="#" style="width:100%;height:250px;"/>
         </div>
